Completed part 2 "questions"

--- a/Individual Planning Report.ipynb
+++ b/Individual Planning Report.ipynb
@@ -149,9 +149,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd69f70b-3503-4a12-b46c-9da33cb2006b",
+   "metadata": {},
+   "source": [
+    "<h2>2. Questions:</h2>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea35b468-b099-401c-b6c9-e3e457001ef8",
+   "metadata": {},
+   "source": [
+    "<p><b>Broad question to address:</b> We would like to know which \"kinds\" of players are most likely to contribute a large amount of data so that we can target those players in our recruiting efforts.</p>\n",
+    "<p><b>Specific question to address:</b> We would like to know which \"kinds\" of players are most likely to contribute a large amount of data so that we can target those players in our recruiting efforts.</p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f447bb5-bba6-4cdf-90ef-e4b32d054480",
+   "id": "4f8547be-9f4e-40d4-8a95-901cb7d0ce18",
    "metadata": {},
    "outputs": [],
    "source": []
