Fixed some text

--- a/Individual Planning Report.ipynb
+++ b/Individual Planning Report.ipynb
@@ -427,6 +427,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b8d5a43-e7a6-4fd1-8db4-ccff25dd96a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "The mean played hours is 5.85 and the mean age is 21.14."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6347ebce-6cab-4f1d-b822-efb738380bbc",
    "metadata": {},
