Finalized report and fixed typo

--- a/Individual Planning Report.ipynb
+++ b/Individual Planning Report.ipynb
@@ -108,7 +108,7 @@
     "    <li><u>hashedEmail (chr):</u> A categorical variable used to recognize each player. Each player has a unique code to identify them by.</li>\n",
     "    <li><u>played_hours (dbl):</u> A numerical variable used to report the player's total hours played.</li>\n",
     "    <li><u>name (chr):</u> A categorical variable used to identify the player's name.</li>\n",
-    "    <li><u>name (chr):</u> A categorical variable used to identify the player's gender.</li>\n",
+    "    <li><u>gender (chr):</u> A categorical variable used to identify the player's gender.</li>\n",
     "    <li><u>Age (dbl):</u> A numerical variable used to report the player's age.</li>\n",
     "</ol>"
    ]
