Added name and group

--- a/Individual Planning Report.ipynb
+++ b/Individual Planning Report.ipynb
@@ -5,7 +5,7 @@
    "id": "713bc5e4-93ba-4da5-8e7b-0fd99b053640",
    "metadata": {},
    "source": [
-    "<h1>Individual Planning Report</h1>\n"
+    "<h1>Individual Planning Report - Group 38 - Brian Keung</h1>\n"
    ]
   },
   {
@@ -108,7 +108,7 @@
     "    <li><u>hashedEmail (chr):</u> A categorical variable used to recognize each player. Each player has a unique code to identify them by.</li>\n",
     "    <li><u>played_hours (dbl):</u> A numerical variable used to report the player's total hours played.</li>\n",
     "    <li><u>name (chr):</u> A categorical variable used to identify the player's name.</li>\n",
-    "    <li><u>name (chr):</u> A categorical variable used to identify the player's gender.</li>\n",
+    "    <li><u>gender (chr):</u> A categorical variable used to identify the player's gender.</li>\n",
     "    <li><u>Age (dbl):</u> A numerical variable used to report the player's age.</li>\n",
     "</ol>"
    ]
@@ -141,7 +141,7 @@
    "id": "7c5f1274-16e4-4b8e-9910-16818dde159a",
    "metadata": {},
    "source": [
-    "Issues with the data include the presence of 2 NA's in quantitative variables like Age and end_time, which should be addressed either with mean imputation or removing them. Another issue may be that there is a discrepancy in the proportions of players for each category. There are significantly more Amateurs (63) and very little Pros (14) compared to other categories in the dataset which may skew the results (32% Amateurs compared to 7% Pros). The distribution of Age and Playtime is also very skewed, with playtime having a median of 0.100 and age staying around the 20 years old range.</p> "
+    "Issues with the data include the presence of 2 NA's in quantitative variables like Age and end_time, which should be addressed either with mean imputation or removing them. Another issue may be that there is a discrepancy in the proportions of players for each category. There are significantly more Amateurs (63) and very little Pros (14) compared to other categories in the dataset which may skew the results. The distribution of Age and Playtime is also very skewed. </p> "
    ]
   },
   {
@@ -481,7 +481,7 @@
    "id": "a9a75657-9401-4f5a-8596-2846c690a8e8",
    "metadata": {},
    "source": [
-    "From the plots displayed below, it appears that the \"regular\" experience level has the highest average playtime, followed by \"amateurs\". It can also be seen that the distribution for age is very skewed to the right, with most participants aged around 20 years old. Playtime is also highest around that age range. Playtime is also very skewed right, with many players having almost 0 playtime and few having greater than 50 hours."
+    "From the plots displayed below, it appears that the \"regular\" experience level has the highest average playtime, followed by \"amateurs\". It can also be seen that the distribution for age is very skewed to the right, with most participants aged around 20 years old. Playtime is also highest around that age range. PLaytime is also very skewed right, with many players having almost 0 playtime and few having greater than 50 hours."
    ]
   },
   {
